--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
     <div class="container mt-5">
       <h1 class="text-center mb-4">Todo App</h1>
 
-      <div class="row mb-3">
-        <div class="col-4">
+      <!-- Add Todo Input Section -->
+      <div class="row g-2 mb-3">
+        <div class="col-md-4">
           <input type="text" id="inputTask" class="form-control" placeholder="Add your new todo">
         </div>
-        <div class="col-3">
-          <input type="date" id="inputCreatedDate" class="form-control" placeholder="From Date">
+        <div class="col-md-3">
+          <input type="date" id="addFromDate" class="form-control" placeholder="From Date">
         </div>
-        <div class="col-3">
-          <input type="date" id="inputDueDate" class="form-control" placeholder="To Date">
+        <div class="col-md-3">
+          <input type="date" id="addToDate" class="form-control" placeholder="To Date">
         </div>
-        <div class="col-2 d-grid">
-          <button class="btn btn-primary" onclick="addTodo()">
+        <div class="col-md-2">
+          <button class="btn btn-primary w-100" onclick="addTodo()">
             <i class="fa-solid fa-plus"></i>
           </button>
         </div>
       </div>
 
+      <!-- Filter/Search Section -->
       <div class="row mb-3">
         <div class="col">
           <input type="text" id="searchInput" class="form-control" placeholder="Search by task name" oninput="searchTodos()">
